# FFmpegWrapper

./: .gitignore  README.md  app_entry.py  entitlements.plist  pyinstaller-macos.spec  pyproject.toml  requirements.txt
.cursor/rules/: project-conventions.mdc  slash-commands.mdc
.cursor/skills/build-local/: SKILL.md
.cursor/skills/build-sign-notarize/: SKILL.md
.cursor/skills/dev-workflow/: SKILL.md
resources/: app_icon.icns
src/ffmpeg_app/: __init__.py  ffmpeg_runner.py  main.py  notes_generator.py  options.py  settings.py  transcriber.py  ui.py
tests/: test_options.py  test_runner.py  test_settings.py
