[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-app"
version = "0.1.0"
description = "Simple desktop wrapper around ffmpeg toggles and sliders"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["PySide6>=6.6,<7.0", "openai>=1.60"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
ffmpeg-app = "ffmpeg_app.main:main"

